--- a/src/Arcanum.UI/Components/Windows/DebugWindows/ExportFileWindow.xaml
+++ b/src/Arcanum.UI/Components/Windows/DebugWindows/ExportFileWindow.xaml
@@ -5,7 +5,7 @@
                          xmlns:d = "http://schemas.microsoft.com/expression/blend/2008"
                          xmlns:styleClasses = "clr-namespace:Arcanum.UI.Components.StyleClasses"
                          mc:Ignorable = "d"
-                         Title = "ExportFileWindow"
+                         Title = "AGS File Exporter"
                          Height = "700"
                          Width = "1300"
                          WindowStartupLocation = "CenterScreen">
@@ -19,45 +19,82 @@
 
         <Grid.RowDefinitions>
             <RowDefinition Height = "*" />
-            <RowDefinition Height = "30" />
+            <RowDefinition Height = "Auto" />
         </Grid.RowDefinitions>
 
-        <ListView Grid.Column = "0"
-                  Grid.Row = "0"
-                  Margin = "2"
-                  SelectionMode = "Single"
-                  ItemsSource = "{Binding AvailableTypes, RelativeSource={RelativeSource AncestorType=Window}}"
-                  SelectionChanged = "OnTypeSelectionChanged">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text = "{Binding Name}" />
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+        <!-- Column 0: Available Types -->
+        <Grid Grid.Column = "0"
+              Grid.Row = "0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height = "Auto" />
+                <RowDefinition Height = "*" />
+            </Grid.RowDefinitions>
+            <styleClasses:CorneredTextBox Grid.Row = "0"
+                                          x:Name = "TypeSearchBox"
+                                          Margin = "2,2,2,0"
+                                          TextChanged = "OnTypeSearchChanged" />
+            <ListView Grid.Row = "1"
+                      x:Name = "TypesListView"
+                      Margin = "2"
+                      SelectionMode = "Single"
+                      ItemsSource = "{Binding AvailableTypes, RelativeSource={RelativeSource AncestorType=Window}}"
+                      SelectionChanged = "OnTypeSelectionChanged">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text = "{Binding Name}" />
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Grid>
 
-        <ListView Grid.Column = "1"
-                  Grid.Row = "0"
-                  Margin = "2"
-                  x:Name = "AvailableFileObjectsListView"
-                  SelectionMode = "Single"
-                  ItemsSource = "{Binding AvailableFiles, RelativeSource={RelativeSource AncestorType=Window}}"
-                  SelectionChanged = "OnFileSelectionChanged">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text = "{Binding Path.Filename}" />
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+        <!-- Column 1: Available Files -->
+        <Grid Grid.Column = "1"
+              Grid.Row = "0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height = "Auto" />
+                <RowDefinition Height = "*" />
+            </Grid.RowDefinitions>
+            <styleClasses:CorneredTextBox Grid.Row = "0"
+                                          x:Name = "FileSearchBox"
+                                          Margin = "2,2,2,0"
+                                          TextChanged = "OnFileSearchChanged" />
+            <ListView Grid.Row = "1"
+                      Margin = "2"
+                      x:Name = "AvailableFileObjectsListView"
+                      SelectionMode = "Single"
+                      ItemsSource = "{Binding AvailableFiles, RelativeSource={RelativeSource AncestorType=Window}}"
+                      SelectionChanged = "OnFileSelectionChanged">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text = "{Binding Path.Filename}" />
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Grid>
 
-        <ListView Grid.Column = "2"
-                  Grid.Row = "0"
-                  Margin = "2"
-                  SelectionMode = "Single"
-                  ItemsSource = "{Binding ObjectsInFile, RelativeSource={RelativeSource AncestorType=Window}}">
-        </ListView>
+        <!-- Column 2: Objects in File -->
+        <Grid Grid.Column = "2"
+              Grid.Row = "0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height = "Auto" />
+                <RowDefinition Height = "*" />
+            </Grid.RowDefinitions>
+            <styleClasses:CorneredTextBox Grid.Row = "0"
+                                          x:Name = "ObjectInFileSearchBox"
+                                          Margin = "2,2,2,0"
+                                          TextChanged = "OnObjectInFileSearchChanged" />
+            <ListView Grid.Row = "1"
+                      Margin = "2"
+                      SelectionMode = "Single"
+                      ItemsSource = "{Binding ObjectsInFile, RelativeSource={RelativeSource AncestorType=Window}}">
+            </ListView>
+        </Grid>
 
+        <!-- Column 3: Preview and Button -->
         <styleClasses:CorneredTextBox Grid.Column = "3"
                                       Grid.Row = "0"
+                                      AcceptsReturn = "True"
+                                      VerticalScrollBarVisibility = "Auto"
                                       IsReadOnly = "True"
                                       Margin = "2"
                                       Text = "{Binding PreviewText, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=Window}}">
@@ -66,7 +103,8 @@
         <styleClasses:BaseButton Grid.Column = "3"
                                  Grid.Row = "1"
                                  Margin = "2"
-                                 Content = "Refresh"
+                                 Padding = "5"
+                                 Content = "Refresh Preview"
                                  Width = "150"
                                  Click = "OnRefreshButtonClick"
                                  HorizontalAlignment = "Right">
