- Added debouncing to FileWatchers - Expaneded debug functionality for ArcLog

--- a/src/Arcanum.UI/Components/Windows/DebugWindows/DebugPanel/DebugPanelGrid.xaml
+++ b/src/Arcanum.UI/Components/Windows/DebugWindows/DebugPanel/DebugPanelGrid.xaml
@@ -87,6 +87,11 @@
                                      Margin = "2"
                                      Padding = "4"
                                      Click = "ButtonBase_OnClick" />
+
+            <styleClasses:BaseButton Content = "Insert Log Spacer"
+                                     Margin = "2"
+                                     Padding = "4"
+                                     Click = "InsertLogSpacerButton_Click" />
         </StackPanel>
 
         <ContentPresenter Grid.Column = "1"
