Laid ground framework for specialized editors

--- a/src/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
+++ b/src/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
@@ -422,7 +422,7 @@
         </Border>
     </styleClasses:BaseWindow.FooterContent>
 
-    <Grid>
+    <Grid x:Name = "MainGrid">
         <Grid.RowDefinitions>
             <RowDefinition Height = "*" />
         </Grid.RowDefinitions>
@@ -436,6 +436,8 @@
             <ColumnDefinition Width = "Auto" />
             <ColumnDefinition Width = "20*"
                               MinWidth = "200" />
+            <ColumnDefinition Width = "Auto" />
+            <ColumnDefinition Width = "150" />
         </Grid.ColumnDefinitions>
 
         <Border Grid.Column = "0"
@@ -541,9 +543,24 @@
 
         </GridSplitter>
 
-        <!-- <Image Grid.Column = "4" -->
-        <!--        Source = "/Arcanum_UI;component/Assets/Icons/Huge/MapInteractionFiller.png" /> -->
-        <debugPanel:DebugPanelGrid Grid.Column = "4"
+        <Border Grid.Column = "4"
+                BorderBrush = "{DynamicResource DefaultBorderColorBrush}"
+                BorderThickness = "2"
+                CornerRadius = "8"
+                Margin = "2, 0">
+            <ScrollViewer>
+                <ContentPresenter x:Name = "SpecializedEditorPresenter" />
+            </ScrollViewer>
+
+        </Border>
+
+        <GridSplitter Grid.Column = "5"
+                      Width = "4"
+                      ResizeBehavior = "PreviousAndNext"
+                      x:Name = "DebugPanelGridSplitter">
+        </GridSplitter>
+
+        <debugPanel:DebugPanelGrid Grid.Column = "6"
                                    x:Name = "DebugPanel"
                                    VerticalAlignment = "Stretch"
                                    HorizontalAlignment = "Stretch" />
